# test-public

./: ID-39392  README.md
core/app/transaction/: package-lock.json
core/app/wallet/: package.json  wallet.js
core/extension/: lib64.proof.cpp
database/.user/: admin.json
game/: DEVELOPMENT.md  README.md  quick_test.py  test_game.py
game/data/user/: user=1.json  user=3.json  user=4.json  user=Hero2.json  user=Hero3.json  user=Hero4.json  user=Hero5.json  user=TestHero.json  user=TestPlayer.json  user=admin.json  user=sudo.json
game/extension/default/: Player.py
game/extension/mod/: goblin.lua  smile.lua
game/src/: main.py
game/src/function/: Monster.py  battle.py  find_monster.py
numium/: .bashrc  .gitignore  CMakeLists.txt  DEVELOPMENT.md  FILES.md  QUICKSTART.md  README.md  build.sh  example.txt  install.sh  main  plan.txt  setup.py  test_compiler.sh
numium/examples/: test.num
numium/tools/: disasm.py
numium/vm/: CMakeLists.txt  __init__.py
numium/vm/compiler/: __init__.py  compiler.py  lexer.py  numiac.py  opcodes.py
numium/vm/runtime/: CMakeLists.txt
numium/vm/runtime/include/: vm.h
numium/vm/runtime/src/: main.c  vm.c
zraight-numium/: README.md  mad.dpf
zraight-numium/api/: api-compile.go  api-compile.py
zraight-numium/core/app/transaction/: __.start.py  transaction.js
zraight-numium/core/app/wallet/: package.json  test_wallet.js  wallet.js
zraight-numium/core/source/: __init.numium
zraight-numium/core/source/core/: core.py
zraight-numium/core/source/data/: _.coldwallet.json
zraight-numium/database/.user/: alice.json
(+2 files in other folders)
